[gd_scene load_steps=2 format=3 uid="uid://bvj3k4m8x5nqp"]

[ext_resource type="Script" path="res://scenes/license-dialog/license-dialog.gd" id="1_license"]

[node name="LicenseDialog" type="Window"]
title = "Edit License"
initial_position = 2
size = Vector2i(600, 400)
visible = false
script = ExtResource("1_license")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="FileNameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "License for: filename.wav"
theme_override_font_sizes/font_size = 14

[node name="LicenseTextEdit" type="TextEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "Enter license information here..."
wrap_mode = 1

[node name="ButtonHBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel"

[node name="SaveButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonHBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Save"
